--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
                             <p>
                             <h3>
                             <font face="Franklin" color="black">
-                                <li>Music</li>
-                                <li>Programming</li>
-                                <li>Photography</li>
-                                <li>Technology</li>
-                                <li>More music</li>
-                                <li>Reading</li>
+                                <li>Music
+                                <li>Programming
+                                <li>Photography
+                                <li>Technology
+                                <li>More music
+                                <li>Reading
                             </font>
                             </h3>
                             </p>
@@ -126,12 +126,12 @@
                         <p>
                         <h3>
                         <font face="Franklin" color="black">
-                            <li>Música</li>
-                            <li>Programación</li>
-                            <li>Fotografía</li>
-                            <li>Tecnología</li>
-                            <li>Más música</li>
-                            <li>Leer</li>
+                            <li>Música
+                            <li>Programación
+                            <li>Fotografía
+                            <li>Tecnología
+                            <li>Más música
+                            <li>Leer
                         </font>
                         </h3>
                         </p>
